<resources>
    <string name="categories">"Categories"</string>
    <string name="riwal_slogan">"Above all. Riwal"</string>
    <string name="password">"Password"</string>
    <string name="page_search">"Search"</string>
    <string name="page_cart">"Cart"</string>
    <string name="page_account">"Account"</string>
    <string name="page_contact">"Contact"</string>
    <string name="page_my_rentals">"My Rentals"</string>
    <string name="page_country">"Select a country"</string>
    <string name="page_project">"Project"</string>
    <string name="page_create_project">"Create project"</string>
    <string name="page_summary">"Summary"</string>
    <string name="hint_search">"Search"</string>
    <string name="rental_period">"Rental period"</string>
    <string name="button_all_categories">"All categories"</string>
    <string name="filter">"Filter"</string>
    <string name="clear">"Clear"</string>
    <string name="done">"Done"</string>
    <string name="delete">"Delete"</string>
    <string name="cancel">"Cancel"</string>
    <string name="submit">"Submit"</string>
    <string name="request_rental">"Request rental"</string>
    <string name="button_continue">"Continue"</string>
    <string name="pick_a_location">"Pick a location"</string>
    <string name="send_request">"Send request"</string>
    <string name="rent_again">"Rent again"</string>
    <string name="option_expected">"Expected"</string>
    <string name="option_final">"Final"</string>
    <string name="machine">"Machine"</string>
    <string name="working">"Working"</string>
    <string name="add_to_order">"Add to order"</string>
    <string name="pictures">"Pictures"</string>
    <string name="cart">"cart"</string>
    <string name="delivery_time">"Delivery time"</string>
    <string name="machine_order_added">"Machine added to cart"</string>
    <string name="project">"Project"</string>
    <string name="rental">"Rental"</string>
    <string name="key_brand">"Brand:"</string>
    <string name="key_model">"Model:"</string>
    <string name="key_weight">"Weight:"</string>
    <string name="key_dimensions">"Dimensions (l × w × h):"</string>
    <string name="key_platform_dimensions">"Platform (l × w):"</string>
    <string name="key_working_height">"Working height:"</string>
    <string name="key_working_outreach">"Working outreach:"</string>
    <string name="key_lift_capacity">"Lift capacity:"</string>
    <string name="key_propulsion">"Propulsion:"</string>
    <string name="key_order_number">"Order number:"</string>
    <string name="key_price_rate">"Price rate:"</string>
    <string name="key_project_city">"Project city:"</string>
    <string name="key_contact_person">"Contact person:"</string>
    <string name="key_project_name">"Project name:"</string>
    <string name="key_operator_name">"Operator name:"</string>
    <string name="key_purchase_order">"Purchase order:"</string>
    <string name="key_period">"Period:"</string>
    <string name="key_delivery_time">"Delivery time:"</string>
    <string name="key_quantity">"Quantity:"</string>
    <string name="value_in_meters">"%s meters"</string>
    <string name="company">"Company"</string>
    <string name="name">"Name"</string>
    <string name="phone">"Phone"</string>
    <string name="email">"Email"</string>
    <string name="project_name">"Project name"</string>
    <string name="project_contact_name">"Contact person at project"</string>
    <string name="project_contact_phone_number">"Phone number"</string>
    <string name="address">"Address"</string>
    <string name="zip_code">"ZIP code"</string>
    <string name="city">"City"</string>
    <string name="machines">"Machines"</string>
    <string name="contact_information">"Contact information"</string>
    <string name="project_information">"Project information"</string>
    <string name="general">"General"</string>
    <string name="purchase_order">"Your purchase order"</string>
    <string name="notes">"Notes"</string>
    <string name="no_machines_found">"No machines found"</string>
    <string name="empty_cart">"No machines added yet"</string>
    <string name="empty_project">"You have no projects.
Press the \"+\" button to add one."</string>
    <string name="error_invalid_mail_address">"Enter a valid email address"</string>
    <string name="error_invalid_password">"Enter a password"</string>
    <string name="dialog_delete_machine_order_title">"Delete from cart?"</string>
    <string name="dialog_delete_machine_order_message">"This machine will be removed from the cart."</string>
    <string name="dialog_delete_project_title">"Delete project?"</string>
    <string name="dialog_delete_project_message">"This project will not be available anymore."</string>
    <string name="option_contact_person">"I'm the contact person"</string>
    <string name="place_this_order">"Place this order?"</string>
    <string name="account_manager">"Account manager"</string>
    <string name="any_questions">"Any questions?"</string>
    <string name="my_rentals">"My rentals"</string>
    <string name="my_invoices">"My invoices"</string>
    <string name="training">"Training"</string>
    <string name="log_out">"Log out"</string>
    <string name="log_in">"Log in"</string>
    <string name="scissor_lift">"Scissor lifts"</string>
    <string name="vertical_lift">"Vertical lifts"</string>
    <string name="crawler_lift">"Crawler lifts"</string>
    <string name="articulated_boom_lift">"Articulated boom lifts"</string>
    <string name="spider_lift">"Spider lifts"</string>
    <string name="telescopic_boom_lift">"Telescopic boom lifts"</string>
    <string name="trailer_mounted_lift">"Trailer mounted lifts"</string>
    <string name="truck_mounted_lift">"Truck mounted lifts"</string>
    <string name="forklift">"Forklifts"</string>
    <string name="telehandler_standard">"Standard telehandlers"</string>
    <string name="telehandler_rotating">"Rotating telehandlers"</string>
    <string name="crane">"Cranes"</string>
    <string name="glass_lift">"Glass lifts"</string>
    <string name="order_status_unknown">"Unknown"</string>
    <string name="order_status_pending_deliveries">"Pending delivery"</string>
    <string name="order_status_current_rentals">"On rent"</string>
    <string name="order_status_closed_rentals">"Closed"</string>
    <string name="country_belgium">"Belgium"</string>
    <string name="country_croatia">"Croatia"</string>
    <string name="country_denmark">"Denmark"</string>
    <string name="country_france">"France"</string>
    <string name="country_germany">"Germany"</string>
    <string name="country_kazakhstan">"Kazakhstan"</string>
    <string name="country_norway">"Norway"</string>
    <string name="country_poland">"Poland"</string>
    <string name="country_slovenia">"Slovenia"</string>
    <string name="country_spain">"Spain"</string>
    <string name="country_sweden">"Sweden"</string>
    <string name="country_netherlands">"The Netherlands"</string>
    <string name="country_united_kingdom">"United Kingdom"</string>
    <string name="no_rentals_found">"No rentals found"</string>
    <string name="unknown">"Unknown"</string>
    <string name="request_changes">"Request changes"</string>
    <string name="order_request_succeeded">"Thank you. Your request has been sent."</string>
    <string name="order_request_failed">"Something went wrong. Please try again."</string>
    <string name="login_failed">"Login failed"</string>
    <string name="unknown_username_password_combination">"This combination of username and password is unknown to us"</string>
    <string name="confirm">"Confirm"</string>
    <string name="off_rent_date">"Off rent date"</string>
    <string name="off_rent_time">"Off rent time"</string>
    <string name="comments">"Comments"</string>
    <string name="dialog_confirm_off_hire_title">"Off rent %s"</string>
    <string name="dialog_confirm_off_hire_message">"Stop renting this machine on %s."</string>
    <string name="dialog_confirm_request_change_title">"Request change"</string>
    <string name="dialog_confirm_request_change_message">"The change request will be processed as soon as possible."</string>
    <string name="request_off_rent_failed">"Off rent request failed. Please try again later."</string>
    <string name="off_rent_requested">"Off rent requested. We will process it as soon as possible."</string>
    <string name="change_request_failed">"Change request failed. Please try again later."</string>
    <string name="changes_requested_message">"Changes requested. We will process them as soon as possible."</string>
    <string name="electric">"Electric"</string>
    <string name="diesel">"Diesel"</string>
    <string name="hybrid_gasoline">"Hybrid (gasoline)"</string>
    <string name="hybrid_diesel">"Hybrid (diesel)"</string>
    <string name="hybrid">"Hybrid"</string>
    <string name="gasoline">"Gasoline"</string>
    <string name="natural_gas">"Natural gas"</string>
    <string name="propulsion">"Propulsion"</string>
    <string name="off_rent_button">"Stop renting"</string>
    <string name="on_rent">"On rent"</string>
    <string name="country_international">"Riwal International"</string>
    <string name="change_expected_off_rent_date_edit_text_hint">"Off rent (expected)"</string>
    <string name="change_final_off_rent_date_edit_text_hint">"Off rent (final)"</string>
    <string name="dialog_clear_machine_orders_title">"Are you sure?"</string>
    <string name="dialog_clear_machine_orders_message">"You cannot order machines from different countries. Your cart will be emptied."</string>
    <string name="update">"Update"</string>
    <string name="feedback">"Feedback"</string>
    <string name="send">"Send"</string>
    <string name="page_depot">"Depots"</string>
    <string name="page_feedback">"Feedback"</string>
    <string name="page_edit_project">"Edit project"</string>
    <string name="setting_depots">"Depots"</string>
    <string name="setting_contact">"Contact"</string>
    <string name="setting_country">"Country"</string>
    <string name="setting_disclaimer">"Disclaimer"</string>
    <string name="setting_privacy_policy">"Privacy policy"</string>
    <string name="setting_feedback">"Feedback"</string>
    <string name="search_menu_item">"Search"</string>
    <string name="filter_period_title">"Period"</string>
    <string name="filter_rental_status_title">"Rental status"</string>
    <string name="page_more">"More"</string>
    <string name="change_request_form_project_name_field_label">"Project name"</string>
    <string name="change_request_form_project_address_field_label">"Address"</string>
    <string name="change_request_form_project_contact_field_label">"Contact person on project"</string>
    <string name="change_request_form_project_contact_phone_number_field_label">"Phone number"</string>
    <string name="change_request_form_on_rent_date_field_label">"Rental period start date"</string>
    <string name="change_request_form_on_rent_time_field_label">"Delivery time"</string>
    <string name="change_request_form_off_rent_date_field_label">"Rental period stop date"</string>
    <string name="change_request_form_off_rent_time_field_label">"Rental period stop time"</string>
    <string name="change_request_form_purchase_order_field_label">"Purchase order"</string>
    <string name="request_an_account">"Request an account"</string>
    <string name="request_account_message">"Please fill in the information below. You'll receive a confirmation mail when you've send the form."</string>
    <string name="riwal_login_message_title">"Check out My Riwal"</string>
    <string name="login_message">"Want to see your current rentals? Easily off rent machines or make some changes to current rentals?

Log in or request an account to start."</string>
    <string name="forgot_password_button_title">"Forgot password?"</string>
    <string name="page_home">"Home"</string>
    <string name="vat_number">"VAT number"</string>
</resources>