<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:orderInCategory="0"
        android:title="@string/page_home" />
    <item
        android:id="@+id/nav_cart"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="1"
        android:title="@string/page_cart" />

    <item
        android:id="@+id/nav_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:orderInCategory="2"
        android:title="@string/page_account" />

    <item
        android:id="@+id/nav_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:orderInCategory="3"
        android:title="@string/page_more" />

</menu>