<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".requestaccountform.RequestAccountFormViewImpl">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Material.TextAppearance.Card.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/request_account_message" />

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/nameEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:src="@drawable/ic_person" />

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/companyEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/company"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:src="@drawable/ic_company" />

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/emailEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:src="@drawable/ic_mail" />

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/change_request_form_project_contact_phone_number_field_label"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:src="@drawable/ic_phone" />


            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/VATNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/vat_number"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:src="@drawable/ic_city_hall" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
