<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".project.editproject.EditProjectViewImpl">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- PROJECT NAME -->

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/projectNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/project_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:src="@drawable/ic_people" />

            <!-- ADDRESS -->

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/projectAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textPostalAddress|textCapWords"
                android:src="@drawable/ic_location" />

            <!-- CONTACT NAME & PHONE-->

            <CheckBox
                android:id="@+id/contactSameAsOrderContactCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:checked="true"
                android:text="@string/option_contact_person" />

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/projectContactNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/project_contact_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:src="@drawable/ic_person" />

            <com.riwal.rentalapp.common.ui.EditTextView
                android:id="@+id/projectContactPhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/project_contact_phone_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:src="@drawable/ic_phone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>